@@ -1,3 +1,8 @@
+2009-3-1 Yu-Sung Su     <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 1.2-7.
+    * R/display: fix a bug in display.mer
+
+
 2009-2-26 Yu-Sung Su     <ys463@columbia.edu>  
     * DESCRIPTION (Version, Date): 1.2-6.
     * R/display: print out t-value, z-value, p-value
